Fix to group admin screen.

--- a/app/views/admin_groups/index.html.erb
+++ b/app/views/admin_groups/index.html.erb
@@ -10,7 +10,7 @@
 
 <p class="normal"><%= link_to 'Back to Users', users_path %></p>
 
-<div class="item-table">
+<div class="item-table" id="group-admin">
   <table>
     <tr class="listing-header">
       <td class="listing-i-ff">Name</td>
