--- a/app/views/memberships/destroy.js.erb
+++ b/app/views/memberships/destroy.js.erb
@@ -4,6 +4,7 @@ $('#group-admin').html(
       '<td class="listing-i-ff">Name:</td>' +
       '<td class="listing-i-fl">Description:</td>' +
       '<td>Membership Status:</td>' +
+      '<td>Actions:</td>' +
     '</tr>' +
     '<%= escape_javascript(render(@groups)) %>' +
   '</table>'
