More email changes.

--- a/app/views/notification/notify_contact.text.erb
+++ b/app/views/notification/notify_contact.text.erb
@@ -1,8 +1,8 @@
 The user at email: '<%= @email %>',
 
-Contacted Incivent with the following message:
+Contacted ImpactReady with the following message:
 
 <%= @message %>
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
