--- a/app/views/notification/notify_deadline.text.erb
+++ b/app/views/notification/notify_deadline.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @user.first_name %>,
 
-An action which has been assigned to you called:
+A task which has been assigned to you called:
 
 <%= @description %>
 
@@ -11,4 +11,4 @@ Navigate to your dashboard using the link below to find out more:
 http://www.incivent.com/
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
