--- a/app/views/notification/notify_incivent.text.erb
+++ b/app/views/notification/notify_incivent.text.erb
@@ -1,9 +1,9 @@
 Hi <%= @user.first_name %>,
 
-A new incivent has been added in the group '<%= @group.name %>' of which you are a member.
+A new event has been added in the group '<%= @group.name %>' of which you are a member.
 Please click on the hyperlink below for more details:
 
 <%= @incivent_url %>
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
