--- a/app/views/notification/notify_intervention.text.erb
+++ b/app/views/notification/notify_intervention.text.erb
@@ -1,9 +1,9 @@
 Hi <%= @user.first_name %>,
 
-A new action has been assigned to you relating to the Incivent '<%= @incivent.name %>'.
+A new task has been assigned to you relating to the event '<%= @incivent.name %>'.
 Please click on the hyperlink below for more details:
 
 <%= @incivents_url %>
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
