--- a/app/views/notification/password_reset.text.erb
+++ b/app/views/notification/password_reset.text.erb
@@ -9,4 +9,4 @@ To reset your password click the URL below.
 If you did not request your password to be reset please ignore this email and your password will stay as it is.
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
