--- a/app/views/notification/notify_looming.text.erb
+++ b/app/views/notification/notify_looming.text.erb
@@ -11,4 +11,4 @@ Navigate to your dashboard using the link below to find out more:
 http://www.incivent.com/
 
 Kind regards,
-The Incivent Team
+The ImpactReady Team
