--- a/app/views/notification/notify_looming.text.erb
+++ b/app/views/notification/notify_looming.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @user.first_name %>,
 
-An action which has been assigned to you called:
+A task which has been assigned to you called:
 
 <%= @description %>
 
