Views cleand up some more, Incivent completely removed.

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -28,7 +28,7 @@
   <table>
     <tr class="listing-header">
       <td class="listing-i-fl"><strong>Group Name</strong></td>
-      <td><strong>Number of Incivents</strong></td>
+      <td><strong>Number of Events</strong></td>
       <td><strong>Number of Tasks</strong></td>
       <td><strong>Number of Messages</strong></td>
     </tr>
@@ -62,7 +62,7 @@
   </div>
 
   <div class="admin-column">
-    <p class="normal"><strong>Incivent Classification</strong></p>
+    <p class="normal"><strong>Event Classification</strong></p>
     <p class="normal"><%= link_to "Manage Priority Options", priorities_path %></p>
     <p class="normal"><%= link_to "Manage Types", types_path %></p>
     <p class="normal"><%= link_to "Manage Statuses", statuses_path %></p>
