--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Incivent | Visualised Operations
+      ImpactReady | Visualised Operations
     </title>
     <%= csrf_meta_tag %>
     <%= stylesheet_link_tag 'mobile' %>
