--- a/app/views/notification/notify_deadline.text.erb
+++ b/app/views/notification/notify_deadline.text.erb
@@ -6,9 +6,7 @@ A task which has been assigned to you called:
 
 is due today!
 
-Navigate to your dashboard using the link below to find out more:
-
-http://www.incivent.com/
+Navigate to your dashboard to find out more.
 
 Kind regards,
 The ImpactReady Team
