--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>About Us - The Incivent Manifesto</h2>
+  <h2>About Us</h2>
 </div>
 
 <div class="spacer">
@@ -17,8 +17,7 @@
 		<h3><strong>Do you spend hours trying to understand what your roaming employees or agent are doing? Of course you do.</strong></h3>
 		<p class="normal">Remember that feeling of ill ease because you just could not get a grasp on the current state of your operations. You probably felt like you didn't have a bird's eye view on the situation. Of course you had your normal suite of decision making tools but none of them could really give you a quick situational grasp. To do that you had to spend several hours phoning around as well as reading emails, and several more in meetings trying to figure out what is going on.</p>
 
-		<p class="normal"><%= link_to "Incivent.com", root_path %> aims to solve that problem by creating a platform for that makes it easy, at a glance, to see what is being done, and how things are going.  We started the company with a single premise: Managing field operations or travelling workers is hard, time-consuming work.</p>
-		<p class="normal">We could all think of numerous examples of this not only in our own work experience. So founder Raoul de Villiers and a few associates got together and started coding! The result is what you see in front of you.</p>
+		<p class="normal">ImpactReady aims to solve that problem by creating a platform for that makes it easy, at a glance, to see what is being done, and how things are going.  We started the company with a single premise: Managing field operations or travelling workers is hard, time-consuming work.</p>
 	</div>
 </div>
 
