--- a/app/views/static_pages/pricing_signup.html.erb
+++ b/app/views/static_pages/pricing_signup.html.erb
@@ -15,7 +15,7 @@
 <div class="general-form">
 	<div class="pricing">
 		<h3 class="center">
-		  Incivent currently comes in three flavours. Choose an option to open an account now!
+		  Our geolocated service currently comes in three flavours. Choose an option to open an account now!
 		</h3>
 		<div class="price-block">
 			<h3>Test</h3>
