--- a/app/views/account_invite/invitation.text.erb
+++ b/app/views/account_invite/invitation.text.erb
@@ -1,13 +1,12 @@
-User Registration - Incivent platform
+User Registration - ImpactReady
 
-Your email has been added to the account '<%= @account.name %>' on the Incivent Platform.
+Your email has been added to the account '<%= @account.name %>' on ImpactReady.
 
 Please use the link on this email to register as a user and complete sign up:
 
 <%= @signup_url %>
 
-If you did not attempt registration or your organisation is not on the Incivent Platform, please ignore this email.
+If you did not attempt registration or your organisation is not on ImpactReady, please ignore this email.
 
 Kind regards,
-The Incivent Team
-www.incivent.com
+The ImpactReady Team
