--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Incivent | Visualised Operations
+      ImpactReady | Visualised Operations
     </title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/include' %>
@@ -19,13 +19,13 @@
     <section class="header-wrapper">
       <%= render 'layouts/header' %>
     </section>
-    
-    <section class="container"> 
+
+    <section class="container">
       <div class="page">
        <%= yield %>
       </div>
     </section>
-    
+
     <section class="footer-wrapper">
       <%= render 'layouts/footer_menu' %>
       <%= debug(params) if Rails.env.development? %>
