Cosmetic changes complete, privacy ans terms disabled.

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -28,7 +28,7 @@ div.top-name {
 
 div.header-main {
     font-family: 'Arimo', sans-serif;
-    background-color: #D1D1D1;
+    background-color: #D5D5D5;
     background-image: -moz-linear-gradient(
         hsla(0,0%,100%,0),
         hsla(0,0%,100%,.4) 105px
@@ -40,8 +40,8 @@ div.header-main {
     );
     padding: 5px 5px 0 5px;
     border-top: 2px solid #ECF1EF;
-    border-bottom: 2px solid #919191;
-    height: 60px;
+    border-bottom: 2px solid #C1C1C1;
+    height: 95px;
 }
 
 .header-info {
