Allmost halfway with a decent upgrade.

--- a/app/views/groups/_form_fields.html.erb
+++ b/app/views/groups/_form_fields.html.erb
@@ -2,9 +2,9 @@
   <%= f.inputs do %>
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :geo_info, :as => :file, :label => "Geocoded overlay", :hint => "Google Earth KML files only" %> 
+    <%= f.input :geo_info, :as => :file, :label => "Geocoded overlay", :hint => "Google Earth KML files only" %>
   <% end %>
-  <%= f.buttons do %>
-    <%= f.commit_button :label => "Submit" %>
+  <%= f.actions do %>
+    <%= f.action :submit, as: :button, label: 'Submit' %>
   <% end %>
 <% end %>
