--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -15,8 +15,8 @@
         <%= f.inputs do %>
           <%= f.input :code %>
         <% end %>
-        <%= f.buttons do %>
-          <%= f.commit_button :label => "Submit" %>
+        <%= f.actions do %>
+          <%= f.action :submit, as: :button, label: 'Submit' %>
         <% end %>
       <% end %>
 	</div>
