--- a/app/views/tasks/_form_fields.html.erb
+++ b/app/views/tasks/_form_fields.html.erb
@@ -14,7 +14,7 @@
     <%= f.input :archive, :label => "Archive this task" %>
     <%= f.input :raised_user_id, :as => :hidden %>
   <% end %>
-  <%= f.buttons do %>
-    <%= f.commit_button :label => "Submit" %>
+  <%= f.actions do %>
+    <%= f.action :submit, as: :button, label: 'Submit' %>
   <% end %>
 <% end %>
