--- a/app/views/accounts/_form_fields.html.erb
+++ b/app/views/accounts/_form_fields.html.erb
@@ -7,5 +7,5 @@
         <%= f.input :payment_active, :as => :select %>
     <% end %>
   <% end %>
-  <%= f.buttons%>
+  <%= f.actions %>
 <% end %>
