--- a/app/views/incivents/_form_fields.html.erb
+++ b/app/views/incivents/_form_fields.html.erb
@@ -12,7 +12,7 @@
     <%= f.input :incivent_image, :as => :file, :label => "Event Image" %>
     <%= f.input :archive, :label => "Archive this Event" %>
   <% end %>
-  <%= f.buttons do %>
-    <%= f.commit_button :label => "Submit" %>
+  <%= f.actions do %>
+    <%= f.action :submit, as: :button, label: 'Submit' %>
   <% end %>
 <% end %>
