--- a/app/views/messages/new.mobile.erb
+++ b/app/views/messages/new.mobile.erb
@@ -11,8 +11,8 @@
       <%= f.input :longitude %>
       <%= f.input :user_id, :as => :hidden %>
     <% end %>
-    <%= f.buttons do %>
-      <%= f.commit_button :label => "Submit" %>
+    <%= f.actions do %>
+      <%= f.action :submit, as: :button, label: 'Submit' %>
     <% end %>
   <% end %>
 </div>
