--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -13,8 +13,8 @@
 	  <%= f.inputs do %>
 	  	<%= f.input :email %>
 	  <% end %>
-	 	<%= f.buttons do %>
-      <%= f.commit_button :label => "Submit Email" %>
+    <%= f.actions do %>
+      <%= f.action :submit, as: :button, label: 'Submit Email' %>
     <% end %>
 	<% end %>
 </div>
