--- a/app/views/statuses/_form_fields.html.erb
+++ b/app/views/statuses/_form_fields.html.erb
@@ -3,7 +3,7 @@
     <%= f.input :description %>
     <%= f.input :account_id, :as => :hidden %>
   <% end%>
-  <%= f.buttons do %>
-    <%= f.commit_button :label => "Submit" %>
+  <%= f.actions do %>
+    <%= f.action :submit, as: :button, label: 'Submit' %>
   <% end %>
 <% end %>
