--- a/app/views/tasks/_task_show.mobile.erb
+++ b/app/views/tasks/_task_show.mobile.erb
@@ -8,8 +8,8 @@
         <%= f.inputs do %>
           <%= f.input :complete, as: :hidden, value: true %>
         <% end %>
-        <%= f.buttons do %>
-          <%= f.commit_button :label => "Complete this Task" %>
+        <%= f.actions do %>
+          <%= f.action :submit, as: :button, label: 'Submit' %>
         <% end %>
       <% end %>
     </div>
