--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     </h1>
     <br />
     <h3 class="home-page-top">
-      A sofware platform for managing field teams and roaming workers.<br/>
+      Effectively manage field teams and roaming workers using our easy-to-use platform.<br/>
       We save you time and effort, simple as that.
     </h3>
   </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="feature-heading">
-      <h1>We develop a web and mobile tool used to manage and report the "on the ground" operations reality through tasks, messages and events.</h1>
+      <h1>A web and mobile tool used to manage and report the "on the ground" operations reality through tasks, messages and events.</h1>
     </div>
 
     <div class="spacer">
