--- a/app/views/incivents/_incivent_show_detail.html.erb
+++ b/app/views/incivents/_incivent_show_detail.html.erb
@@ -64,14 +64,14 @@
   </div>
   <div class="index-item-image">
     <div class="general-form">
-      <% if @incivent.incivent_image.url == "/incivent_images/original/missing.png" %>
-        <strong>No image attached</strong>
-      <% else %>
+      <% if @incivent.incivent_image %>
         <a href="#"><strong>View Image</strong>
           <div>
             <%= image_tag @incivent.incivent_image.url(:medium), :class => "photo" %>
           </div>
         </a>
+      <% else %>
+        <strong>No image attached</strong>
       <% end %>
     </div>
   </div>
