--- a/app/views/layouts/_include.html.erb
+++ b/app/views/layouts/_include.html.erb
@@ -2,7 +2,7 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtJp-fDHOROELFhGj3s0HNVwq0anZlcFM&v=3.15"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtJp-fDHOROELFhGj3s0HNVwq0anZlcFM"></script>
 
 <link href='https://fonts.googleapis.com/css?family=ABeeZee|Arimo:400,700' rel='stylesheet' type='text/css'>
 
@@ -11,7 +11,7 @@
 <%= javascript_include_tag 'application' %>
 
 <!--[if lt IE 8]>
-  <%= stylesheet_link_tag 'application-ie' %>
+  <%#= stylesheet_link_tag 'application-ie' %>
 <![endif]-->
 
 <%= yield(:head) %>
