Year now auto updates.

--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class="footer-copyright">
-        <p>Copyright 2011-2014 ImpactReady. All rights reserved.</p>
+        <p>Copyright 2011-<%= Date.today.year %> ImpactReady. All rights reserved.</p>
     </div>
 
 </footer>
