--- a/app/views/static_pages/pricing_signup.html.erb
+++ b/app/views/static_pages/pricing_signup.html.erb
@@ -28,7 +28,9 @@
 				<li>Unlimited Messages</li>
 				<li>Unlimited Events</li>
 			</ul>
-			<%= link_to "Sign up", account_option_param("Test")%>
+			<div class="large_button_container">
+				<%= link_to "Sign up", account_option_param("Test"), class: 'large_button' %>
+			</div>
 		</div>
 		<div class="price-block">
 			<h3>Pro</h3>
@@ -41,7 +43,9 @@
 				<li>Unlimited Messages</li>
 				<li>Unlimited Events</li>
 			</ul>
-			<%= link_to "Sign up", account_option_param("Pro") %>
+			<div class="large_button_container">
+				<%= link_to "Sign up", account_option_param("Pro"), class: 'large_button' %>
+			</div>
 		</div>
 		<div class="price-block">
 			<h3>Enterprise</h3>
@@ -54,7 +58,9 @@
 				<li>Unlimited Messages</li>
 				<li>Unlimited Events</li>
 			</ul>
-			<%= link_to "Sign up", account_option_param("Enterprise") %>
+			<div class="large_button_container">
+				<%= link_to "Sign up", account_option_param("Enterprise"), class: 'large_button' %>
+			</div>
 		</div>
 		<br class="clear" />
 	</div>
