--- a/app/views/accounts/index.html
+++ b/app/views/accounts/index.html
@@ -8,6 +8,8 @@
 <div class="spacer">
 </div>
 
+<p class="normal"><%= link_to 'Create a New Account', new_group_path %></p>
+
 <div class="listing">
   <div class="listing-header">
     <div class="listing-i-fm">Name:</div>
@@ -23,5 +25,5 @@
 </div>
 
 <div id="accouts">
-  <%= render @accounts %> 
+  <%= render @accounts %>
 </div>
