Cleanup and changes for the new signup page.

--- a/app/views/static_pages/pricing_signup.html.erb
+++ b/app/views/static_pages/pricing_signup.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Pricing</h2>
+  <h2>Signup</h2>
 </div>
 
 <div class="spacer">
@@ -15,53 +15,15 @@
 <div class="general-form">
 	<div class="pricing">
 		<h3 class="center">
-		  Our geolocated service currently comes in three flavours. Choose an option to open an account now!
+			<br />
+			<strong>The ImpactReady application is currently for closed beta users only.</strong>
+			<br /><br />
+			Please contact us using the button below if you would like to obtain access.
+			<br /></br />
 		</h3>
-		<div class="price-block">
-			<h3>Test</h3>
-			<div class="option-price">Free</div>
-			<div><strong>(for 60 Days)</strong></div>
-			<ul>
-				<li>2 Users</li>
-				<li>2 Groups</li>
-				<li>Unlimited Tasks</li>
-				<li>Unlimited Messages</li>
-				<li>Unlimited Events</li>
-			</ul>
-			<div class="large_button_container">
-				<%= link_to "Sign up", account_option_param("Test"), class: 'large_button' %>
-			</div>
+		<div class="large_button_container">
+			<%= link_to "New account ", contact_path, class: 'large_button' %>
 		</div>
-		<div class="price-block">
-			<h3>Pro</h3>
-			<div class="option-price">£129 pm</div>
-			<div><strong>(or £1300 py)</strong></div>
-			<ul>
-				<li>20 Users</li>
-				<li>10 Groups</li>
-				<li>Unlimited Tasks</li>
-				<li>Unlimited Messages</li>
-				<li>Unlimited Events</li>
-			</ul>
-			<div class="large_button_container">
-				<%= link_to "Sign up", account_option_param("Pro"), class: 'large_button' %>
-			</div>
-		</div>
-		<div class="price-block">
-			<h3>Enterprise</h3>
-			<div class="option-price">£199 pm</div>
-			<div><strong>(or £2000 py)</strong></div>
-			<ul>
-				<li>Unlimited Users</li>
-				<li>Unlimited Groups</li>
-				<li>Unlimited Tasks</li>
-				<li>Unlimited Messages</li>
-				<li>Unlimited Events</li>
-			</ul>
-			<div class="large_button_container">
-				<%= link_to "Sign up", account_option_param("Enterprise"), class: 'large_button' %>
-			</div>
-		</div>
-		<br class="clear" />
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 </div>
