More changes, next is getting tests to pass.

--- a/app/views/static_pages/pricing_signup.html.erb
+++ b/app/views/static_pages/pricing_signup.html.erb
@@ -22,7 +22,7 @@
 			<br /></br />
 		</h3>
 		<div class="large_button_container">
-			<%= link_to "New account ", contact_path, class: 'large_button' %>
+			<%= link_to "New account ", contact_path(new_account: true), class: 'large_button' %>
 		</div>
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
