--- a/app/views/launch_interests/_form_fields.html.erb
+++ b/app/views/launch_interests/_form_fields.html.erb
@@ -1,8 +1,14 @@
 <%= semantic_form_for @launch_interest do |f| %>
   <%= f.inputs do %>
   	<% if signed_in? %>
-  		<%= f.input :email_address, :value => current_user.email, :as => :hidden %>
-  	<% else %>
+  		<%= f.input :email_address, input_html: {value: current_user.email}, :as => :hidden %>
+      <%= f.input :subject, input_html: {value: "Support"}, :as => :hidden %>
+    <% else %>
+      <% if @new_account %>
+        <%= f.input :subject, input_html: {value: "New Account Request"}, :as => :hidden %>
+      <% else %>
+        <%= f.input :subject, input_html: {value: "Enquiry"}, :as => :hidden %>
+      <% end %>
     	<%= f.input :email_address, :label => "Contact Email" %>
     <% end %>
     <%= f.input :message, :label => "Message" %>
