--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -5,7 +5,7 @@
   <% if @new_account == true %>
     <h2>Registration: Step 1</h2>
   <% else %>
-    <h2>Invite a User to your Account</h2>
+    <h2>Invite a user to your account</h2>
   <% end %>
 </div>
 
