--- a/app/views/tasks/index.mobile.erb
+++ b/app/views/tasks/index.mobile.erb
@@ -1,7 +1,7 @@
 <%= javascript 'mobile' %>
 
 <div class="mobile-heading-block">
-    <h2>All Tasks</h2>
+    <h2>All tasks</h2>
 </div>
 <% if @tasks.count == 0 %>
 
