--- a/app/views/tasks/new.mobile.erb
+++ b/app/views/tasks/new.mobile.erb
@@ -1,5 +1,5 @@
 <div class="mobile-heading-block">
-    <h2>New Task</h2>
+    <h2>New task</h2>
 </div>
 <div class="mobile-form">
   <%= semantic_form_for @task, :html => {:multipart => true} do |f| %>
