--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -2,7 +2,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Create a new Account</h2>
+  <h2>Create a new account</h2>
 </div>
 
 <div class="spacer">
