--- a/app/views/incivents/new.mobile.erb
+++ b/app/views/incivents/new.mobile.erb
@@ -1,5 +1,5 @@
 <div class="mobile-heading-block">
-    <h2>New Event</h2>
+    <h2>New event</h2>
 </div>
 <div class="mobile-form">
   <%= semantic_form_for @incivent, :html => {:multipart => true} do |f| %>
