--- a/app/views/incivents/show.html.erb
+++ b/app/views/incivents/show.html.erb
@@ -7,12 +7,12 @@
 
 <p class="normal">
   <% if current_user?(@incivent.user) || current_user.master_user? %>
-    <%= link_to "Edit this Event", edit_incivent_path(@incivent) %>  | 
-    <%= link_to "Delete this Event", @incivent, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete #{@incivent.name}" %>  |  
+    <%= link_to "Edit this event", edit_incivent_path(@incivent) %>  |
+    <%= link_to "Delete this event", @incivent, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete #{@incivent.name}" %>  |
   <% end %>
-  <%= link_to 'Back to Events', incivents_path %>
+  <%= link_to 'Back to events', incivents_path %>
 </p>
 
 <%= render 'incivents/incivent_show_detail' %>
 
-<p class="normal"><%= link_to 'Back to Events', incivents_path %></p>
+<p class="normal"><%= link_to 'Back to events', incivents_path %></p>
