--- a/app/views/messages/new.mobile.erb
+++ b/app/views/messages/new.mobile.erb
@@ -1,5 +1,5 @@
 <div class="mobile-heading-block">
-    <h2>New Message</h2>
+    <h2>New message</h2>
 </div>
 <div class="mobile-form">
   <%= semantic_form_for @message do |f| %>
