--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -7,10 +7,10 @@
 
 <p class="normal">
   <% if current_user.master_user? %>
-    <%= link_to "Edit this Message", edit_message_path(@message) %>  |
-    <%= link_to "Delete this Message", @message, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete message" %>  |
+    <%= link_to "Edit this message", edit_message_path(@message) %>  |
+    <%= link_to "Delete this message", @message, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete message" %>  |
   <% end %>
-  <%= link_to 'Back to Messages', messages_path %>
+  <%= link_to 'Back to messages', messages_path %>
 </p>
 
 <%= render 'messages/message_show_detail' %>
