--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,10 +7,10 @@
 
 <p class="normal">
   <% if current_user.master_user? %>
-    <%= link_to "Edit this Task", edit_task_path(@task) %>  |
-    <%= link_to "Delete this Task", @task, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete task" %>  |
+    <%= link_to "Edit this task", edit_task_path(@task) %>  |
+    <%= link_to "Delete this task", @task, :method => :delete, :data => {:confirm => "Are you sure?"}, :title => "Delete task" %>  |
   <% end %>
-  <%= link_to 'Back to Tasks', tasks_path %>
+  <%= link_to 'Back to tasks', tasks_path %>
 </p>
 
 <%= render 'tasks/task_show_detail' %>
