--- a/app/views/notification/password_reset.text.erb
+++ b/app/views/notification/password_reset.text.erb
@@ -6,7 +6,7 @@ To reset your password click the URL below.
 
 <%= edit_password_reset_url(@user.password_reset_token) %>
 
-If you did not request your password to be reset please ignore this email and your password will stay as it is.
+If you did not request your password to be reset please ignore this email and your password will remain as it is.
 
 Kind regards,
 The ImpactReady Team
