Mobile buttons changed.

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -42,6 +42,10 @@ div.mobile-heading-block {
 div.mobile-form {
   background-color: #FFFFFD;
   padding: 0 5px 0 5px;
+
+  button {
+    width: 100%;
+  }
 }
 
 div.mt-item {
