--- a/app/views/tasks/_task_show.mobile.erb
+++ b/app/views/tasks/_task_show.mobile.erb
@@ -9,7 +9,7 @@
           <%= f.input :complete, as: :hidden, input_html: { value: true} %>
         <% end %>
         <%= f.actions do %>
-          <%= f.action :submit, as: :button, label: 'Submit' %>
+          <%= f.action :submit, as: :button, label: 'Complete' %>
         <% end %>
       <% end %>
     </div>
