--- a/app/assets/stylesheets/base_mobile.css.scss
+++ b/app/assets/stylesheets/base_mobile.css.scss
@@ -16,7 +16,7 @@ body {
   margin: 0 0 0 0;
   padding: 0px;
   color: #030303;
-  background: #fff url(/assets/GreyBackground.png) repeat;
+  background: #fff;
   font-size: 18px;
   line-height: 1.5;
 }
