Trying to get mobile geolocation to work.

--- a/app/views/incivents/new.mobile.erb
+++ b/app/views/incivents/new.mobile.erb
@@ -1,3 +1,7 @@
+<%= content_for(:head) do %>
+  <script src='assets/get_coords.js'></script>
+<% end %>
+
 <div class="mobile-heading-block">
     <h2>New event</h2>
 </div>
