--- a/app/views/incivents/new.mobile.erb
+++ b/app/views/incivents/new.mobile.erb
@@ -1,6 +1,4 @@
-<%= content_for(:head) do %>
-  <script src='assets/get_coords.js'></script>
-<% end %>
+<%= javascript 'get_coords' %>
 
 <div class="mobile-heading-block">
     <h2>New event</h2>
