--- a/app/views/accounts/_form_fields.html.erb
+++ b/app/views/accounts/_form_fields.html.erb
@@ -2,7 +2,7 @@
   <%= f.inputs do %>
     <%= f.input :name %>
     <%= f.input :account_option, include_blank: false %>
-    <% if current_user && current_user.god_user %>
+    <% if current_user && current_user.admin_user %>
         <%= f.input :active, as: :select %>
         <%= f.input :payment_active, as: :select %>
     <% end %>
