--- a/app/views/static_pages/service_terms.html.erb
+++ b/app/views/static_pages/service_terms.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Service Terms</h2>
+  <h2>Service terms</h2>
 </div>
 
 <div class="spacer">
@@ -42,7 +42,7 @@
 
 		<h3>Copyright</h3>
 		<p class="normal">We claim no intellectual property rights over the material you provide to the Incivent Platform. Your profile and materials uploaded remain yours. However, by setting your pages to be shared publicly, you agree to allow others to view and share any Content. World-wize does not pre-screen Content, but World-wize and its designee have the right (but not the obligation) in their sole discretion to refuse or remove any Content that is available via the Incivent Platform.</p>
-		<br />	
+		<br />
 
 		<h3>Changes and Alterations</h3>
 		<p class="normal">As a condition to your use of the Incivent Platform, you agree not to:</p>
