--- a/app/views/admin_groups/index.html.erb
+++ b/app/views/admin_groups/index.html.erb
@@ -2,7 +2,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Membership Administration: <%= @user.first_name %> <%= @user.last_name %></h2>
+  <h2>Membership administration: <%= @user.first_name %> <%= @user.last_name %></h2>
 </div>
 
 <div class="spacer">
