--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -28,12 +28,12 @@
   </div>
 
   <div class="heading-block-in">
-    <h2>Group Dashboard: <%= group.name %></h2>
+    <h2>Team dashboard: <%= group.name %></h2>
   </div>
 
   <% if group.incivents.count == 0 && group.tasks.count == 0 && group.messages.count == 0 %>
     <div class="general-form">
-      <p class="normal">There are no events, tasks or messages in this group.</p>
+      <p class="normal">There are no events, tasks or messages in this team.</p>
     </div>
   <% else %>
     <div id="google_map_section-<%= group.id %>" data-kml="<%= attachment_url(group.geo_info) %>" data-url="<%= group_feature_urls(group) %>" data-name="<%= group_feature_names(group) %>" data-lat="<%= group_lats(group) %>" data-long="<%= group_longs(group) %>">
@@ -45,7 +45,7 @@
     </div>
 
     <div class="heading-block-in">
-      <h2>Group Updates: <%= group.name %></h2>
+      <h2>Team updates: <%= group.name %></h2>
     </div>
 
     <div class="spacer">
