--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,22 +8,22 @@
 </div>
 
 <div class="heading-block">
-    <h2>All groups</h2>
+    <h2>All teams</h2>
 </div>
 
 <div class="spacer">
 </div>
 <% if current_user.master_user? %>
-  <p class="normal"><%= link_to 'Create a new group', new_group_path %></p>
+  <p class="normal"><%= link_to 'Create a new team', new_group_path %></p>
 <% end %>
 
 <% if @groups.count == 0%>
 
   <div class="general-form">
     <% if current_user.master_user? %>
-      <p class="normal">You have not created any groups. Please use the link above to create your first group.</p>
+      <p class="normal">You have not created any teams. Please use the link above to create your first group.</p>
     <% else %>
-      <p class="normal">You have not been assigned to any groups. Please contact the Account Administrator.</p>
+      <p class="normal">You have not been assigned to any teams. Please contact the Account Administrator.</p>
     <% end %>
   </div>
 
