--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,6 +7,6 @@
     <% end %>
     <td class="listing-i-fxl"><%= user.member_groups %></td>
     <% if current_user.master_user? %>
-      <td><%= link_to 'Membership Admin', user_admin_groups_path(user) %> | <%= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure?"} %></td>
+      <td><%= link_to 'Edit memberships', user_admin_groups_path(user) %> | <%= link_to "Delete", user, method: :delete, data: {confirm: "Are you sure?"} %></td>
     <% end %>
   </tr>
