Event log discriptions updated.

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -27,10 +27,10 @@
 <div class="item-table">
   <table>
     <tr class="listing-header">
-      <td class="listing-i-fl"><strong>Group Name</strong></td>
-      <td><strong>Number of Events</strong></td>
-      <td><strong>Number of Tasks</strong></td>
-      <td><strong>Number of Messages</strong></td>
+      <td class="listing-i-fl"><strong>Team name</strong></td>
+      <td><strong>Number of events</strong></td>
+      <td><strong>Number of tasks</strong></td>
+      <td><strong>Number of messages</strong></td>
     </tr>
     <% @account.groups.each do |group| %>
       <tr class="listing-item">
