Fixed bug, edit link for statuses and types wrong.

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -30,7 +30,7 @@
       <% @statuses.each do |status| %>
         <tr class="listing-item">
           <td class="listing-i-fm"><%= status.description %></td>
-          <td><%= link_to 'Edit', edit_priority_path(status) %></td>
+          <td><%= link_to 'Edit', edit_status_path(status) %></td>
           <td><%= link_to 'Delete', status, data: {confirm: 'Are you sure?'}, method: :delete %></td>
         </tr>
       <% end %>
